--- a/project1/src/components/Gifs.css
+++ b/project1/src/components/Gifs.css
@@ -1,26 +1,8 @@
 .gallery {
-    display:"flex-container";
-    gap: 4px;
-    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
-    /* grid-gap: 10px; */
-    width:200px;
-    height:200px;
-  }
-  
-  @media screen and (max-width: 767px) {
-    .gallery {
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      grid-gap: 5px;
-    }
-  }
-  
-  .gallery__item {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  .gallery__item:hover {
-    transform: scale(1.05);
-  }
+  display: flex; 
+  flex-direction: row; 
+  align-items: center;
+  gap: 40px; 
+  width: 200px; 
+  height: 200px; 
+}
