designed favourite button

--- a/project1/src/components/Gifs.css
+++ b/project1/src/components/Gifs.css
@@ -3,6 +3,13 @@
   flex-direction: row; 
   align-items: center;
   gap: 40px; 
+   
+}
+.gallery img{
   width: 200px; 
-  height: 200px; 
+  height: 200px;
+  object-fit:cover;
+}
+.gif-container {
+  border:2px solid #000;
 }
